--- a/ToDoApp/app/src/main/res/values/strings.xml
+++ b/ToDoApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ToDoList</string>
+    <string name="change_the_text">New Entry</string>
+    <string name="change">Add</string>
+    <string name="cancel">Cancel</string>
 </resources>
