made some color changes to accents and added toast messages to user inputs

--- a/ToDoApp/app/src/main/res/values/strings.xml
+++ b/ToDoApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">ToDoList</string>
-    <string name="change_the_text">New Entry</string>
-    <string name="change">Add</string>
+    <string name="change_the_title">Change the Title?</string>
+    <string name="change_the_text">New Entry?</string>
+    <string name="addtodo">Add</string>
+    <string name="change">Change</string>
+    <string name="add">Add</string>
     <string name="cancel">Cancel</string>
 </resources>
